--- a/server/package.json
+++ b/server/package.json
@@ -30,11 +30,11 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "sharp": "^0.34.5",
-    "typescript": "^5.9.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
